correccion de errores

--- a/src/app/components/ingresos/dialog-ingresos/dialog-ingresos.component.html
+++ b/src/app/components/ingresos/dialog-ingresos/dialog-ingresos.component.html
@@ -37,7 +37,7 @@
 </div>
 
 <div mat-dialog-actions  style="justify-content:end;">
-    <button type="button" (click)="cancel()" mat-raised-button color="">Cancelar</button>
+    <button class="m-1" type="button" (click)="cancel()" mat-raised-button color="">Cancelar</button>
     <button [disabled]="!form.valid" mat-raised-button (click)="guardar()" color="warn">{{data.boton}}</button>
 </div>
 
